linting added & node.js CI actions

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 0",
+    "lint": "./node_modules/.bin/eslint .",
     "build": "grunt build",
     "compress": "grunt compress",
     "checksum": "grunt checksum",
@@ -26,6 +27,7 @@
     "express": "^4.18.2"
   },
   "devDependencies": {
+    "eslint": "^8.56.0",
     "grunt": "^1.6.1",
     "grunt-contrib-uglify": "^5.2.2"
   }
