parse package.json

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,10 +21,8 @@ jobs:
       - run: npm ci
       - run: npm run release
 
-      - run: |
-          echo 'PACKAGE_JSON<<EOF' >> $GITHUB_ENV
-          cat ./package.json >> $GITHUB_ENV
-          echo 'EOF' >> $GITHUB_ENV   
+      - name: "Read package.json"
+        run: echo "PACKAGE_JSON=$(jq -c . < package.json)" >> $GITHUB_ENV
           
       - uses: ncipollo/release-action@v1        
         with:
