--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -28,3 +28,5 @@ jobs:
         with:
           artifacts: "dist/*"
           tag: "v${{ fromJson(env.PACKAGE_JSON).version }}"
+          generateReleaseNotes: true
+          skipIfReleaseExists: true
