--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -45,7 +45,10 @@ jobs:
               "pr_template": "- #{{TITLE}}\n",
               "empty_template": "#{{OWNER}}\n#{{REPO}}\n#{{FROM_TAG}}\n#{{TO_TAG}}",
               "max_pull_requests": 1000,
-              "max_back_track_time_days": 1000
+              "max_back_track_time_days": 1000,
+              "exclude_merge_branches": [
+                "*"
+              ]
             }          
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
