--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -31,7 +31,6 @@ jobs:
         id: build_changelog
         uses: mikepenz/release-changelog-builder-action@v4
         with:
-          toTag: "${{ github.sha }}"
           commitMode: true
           configurationJson: |
             {
@@ -45,10 +44,7 @@ jobs:
               "pr_template": "- #{{TITLE}}\n",
               "empty_template": "#{{OWNER}}\n#{{REPO}}\n#{{FROM_TAG}}\n#{{TO_TAG}}",
               "max_pull_requests": 1000,
-              "max_back_track_time_days": 1000,
-              "exclude_merge_branches": [
-                "*"
-              ]
+              "max_back_track_time_days": 1000
             }          
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
